--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -1,3 +1,6 @@
+.html{
+    
+}
 .form-control-spacing{
     margin-top:5px;
     margin-bottom:5px;
@@ -139,8 +142,11 @@ ul.rights-menu li{
 * {
     margin: 0;
 }
-html, body {
+html {
     height: 100%;
+}
+body{
+    min-height: 100%;
 }
 .wrapper {
     min-height: 652px;
@@ -152,6 +158,7 @@ html, body {
     background-color:rgba(20,0,0,0.4);
     color:#fff;
     padding:25px;
+    overflow: hidden;
 }
 .footer, .push {
     height: 100px; /* .push must be the same height as .footer */
